# installer-electron

./: .gitignore  CMakeLists.txt  FindICU.cmake  README.md  Readme.txt  appicon.rc  findDependencies.cmake  linuxLibs.qrc  misc.qrc  sample_initialize.json
scripts/: generateQrc.py  path.py  verbosity.py
scripts/utils/: colors.py  env.py  errors.py  initialized.py  net.py  path.py  process.py  system.py
scripts/utils/glob2/: impl.py
src/: embeddedFiles.h  embeddedFilesLinux.cpp  errors.h  files.cpp  files.h  linkedPlugins.cpp  lunaInstallerApp.qrc  lunaInstallerAppMock.qrc  main.cpp
src/consoleInstallerMocks/: consoleInstaller
src/electronAppMock/: lunaInstaller.py
src/lunaInstallerApp/: consoleInstaller  index.html  installer.css  installer.scss  loading.html  main.js  package-lock.json  package.json  renderer.js
src/lunaInstallerApp/fonts/: fonts.css
src/lunaInstallerApp/img/: luna_logo.icns
